--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,13 @@ body {
 	padding: 15px;
 }
 		  
-#map-canvas {
+.mapCanvas {
 	height: 100%;
 	width: 100%;
 }
 
-main, .row, .col-md-9 {
+main,
+.row,
+.col-md-9 {
 	height: 100%;
 }
